# airboltic_analytics

./: README.MD  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
.github/: pull_request_template.md
.github/actions/dbt_core_ci_cd/: action.yml
.github/actions/poetry/: action.yml
.github/workflow/: build.yml
macros/: add_rows_limit.sql
models/marts/air_boltic/dimensions/: dim_aeroplane_models.sql  dim_aeroplane_models.yml  dim_aeroplanes.sql  dim_aeroplanes.yml  dim_customer_groups.sql  dim_customer_groups.yml  dim_customers.sql  dim_customers.yml
models/marts/air_boltic/facts/: fact_orders.sql  fact_orders.yml  fact_trips.sql  fact_trips.yml
models/staging/air_boltic/: source.yml  stg_air_boltic_aeroplane_models.sql  stg_air_boltic_aeroplane_models.yml  stg_air_boltic_aeroplanes.sql  stg_air_boltic_aeroplanes.yml  stg_air_boltic_customer_groups.sql  stg_air_boltic_customer_groups.yml  stg_air_boltic_customers.sql  stg_air_boltic_customers.yml  stg_air_boltic_orders.sql  stg_air_boltic_orders.yml  stg_air_boltic_trips.sql  stg_air_boltic_trips.yml
seeds/: seed_aeroplane_models_output.csv
