[tool.poetry]
name = "airboltic-analytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10, <3.13"
dbt-core = "^1.8.4"
pre-commit = "^3.8.0"
elementary-data = {extras = ["databricks"]}
dbt-databricks = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

